Fix chirp styling white space bug, add edit inputs

--- a/src/styles/Chirp.css
+++ b/src/styles/Chirp.css
@@ -7,7 +7,7 @@
   border-bottom: 1px solid var(--light-grey);
   padding-top: 10px;
   transition: 0.2s;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .chirp:hover {
