--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -164,3 +164,25 @@ header .backContainer:hover {
   cursor: pointer;
   background-color: var(--white-hover);
 }
+
+#bio {
+  font-family: 'Chirp', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  width: 100%;
+  min-height: 54px;
+  padding: 4px;
+  resize: none;
+  overflow: hidden;
+}
+
+input.name,
+input.at {
+  width: content;
+}
+
+.usernameInputContainer {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  color: var(--light-black);
+}
